tests/neg-custom-args/captures/unscoped-classifier.check
-- Error: tests/neg-custom-args/captures/unscoped-classifier.scala:5:8 -------------------------------------------------
5 |class A(a: Async) extends caps.Unscoped // error but msg could be better
  |        ^
  |        reference (A.this.a : Async) is not included in the allowed capture set {cap} of the self type of class A
  |
  |        where:    cap is a fresh root capability classified as Unscoped in the type of class A
-- Error: tests/neg-custom-args/captures/unscoped-classifier.scala:10:8 ------------------------------------------------
10 |class C(f: () => Unit) extends caps.Unscoped // error but msg could be better
   |        ^
   |  reference (C.this.f : () => Unit) is not included in the allowed capture set {cap} of the self type of class C
   |
   |  where:    cap is a fresh root capability classified as Unscoped in the type of class C
-- Error: tests/neg-custom-args/captures/unscoped-classifier.scala:17:15 -----------------------------------------------
17 |    def gg() = g()     // error but msg could be better
   |               ^
   |         reference (g : () => Unit) is not included in the allowed capture set {cap} of the self type of class E
   |
   |         where:    cap is a fresh root capability classified as Unscoped in the type of class E
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/unscoped-classifier.scala:19:11 --------------------------
19 |  val b = B() // error  but msg could be better
   |          ^^^
   |Found:    B^
   |Required: B^'s1
   |
   |Note that capability cap is not classified as trait Unscoped, therefore it
   |cannot be included in capture set 's1 of value b of Unscoped elements.
   |
   |where:    ^ and cap refer to a fresh root capability classified as Nothing created in value b when constructing instance B
   |
   | longer explanation available when compiling with `-explain`
